--- a/css/styles.css
+++ b/css/styles.css
@@ -4,5 +4,13 @@ body{
 }
  .bg-light{
    background:rgba(255,255,255,0.5)!important;
-   width:100vw; 
+   width:100vw;
  }
+
+#naviconanim{
+  transition: 2s;
+}
+
+#navicon:hover #naviconanim{
+  color:green;
+}
